--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^18.2.3",
     "@angular/router": "^18.2.3",
     "@bfoese/ngx-preload-fonts": "^1.0.0",
+    "@favware/skip-dependency": "^1.2.2",
     "angular-svg-icon": "^18.0.1",
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
@@ -31,9 +32,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.3",
-    "@bfoese/ngx-preload-fonts": "^1.0.0",
     "@angular/cli": "^18.2.3",
     "@angular/compiler-cli": "^18.2.3",
+    "@bfoese/ngx-preload-fonts": "^1.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
