--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@bfoese/ngx-preload-fonts": "^1.0.0",
     "@favware/skip-dependency": "^1.2.2",
     "angular-svg-icon": "^18.0.1",
+    "ngx-skeleton-loader": "^9.0.0",
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
