--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-deploy": "ng build  && firebase deploy --only hosting",
+    "build-deploy": "ng build && firebase deploy --only hosting",
     "postbuild": "preloadfonts --dist dist/materuak -f index.html -i arial,helvetica -e comic-sans",
-    "heroku-postbuild": "ng build"
+    "heroku-postbuild": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +31,8 @@
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.14.10",
+    "http-proxy-middleware": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.5",
@@ -46,5 +47,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.5"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
