--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@favware/skip-dependency": "^1.2.2",
     "angular-svg-icon": "^18.0.1",
     "express": "^4.21.0",
+    "http-proxy-middleware": "^2.0.0",
     "ngx-skeleton-loader": "^9.0.0",
-    "primeng": "^17.18.7",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
-    "http-proxy-middleware": "^2.0.0"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.7",
